--- a/paginas/index.html
+++ b/paginas/index.html
@@ -44,7 +44,7 @@
     </nav>
 
     <div class="container">
-        <img src="../imagen/54c21a54b305f13905bc9f027e468a38.jpg" alt="Imagem com sombra" class="imagem">
+        <img src="./imagen/54c21a54b305f13905bc9f027e468a38.jpg" alt="Imagem com sombra" class="imagem">
         <h1 class="text">JuJuTSo KAISEN</h1>
         <div class="sombra"></div>
             <!-- Informações abaixo -->
@@ -57,7 +57,7 @@
     </div>    
 
     <div class="filme1">
-        <img src="../imagen/410e1a0b539cdffd780fdce8ad552ec2.jpg" alt="Jujutsu Kaisen temporada 1" class="imagem-inferior">
+        <img src="./imagen/410e1a0b539cdffd780fdce8ad552ec2.jpg" alt="Jujutsu Kaisen temporada 1" class="imagem-inferior">
         <div class="texto">
             <ul class="lista-textos">
                 <li class="texto1">Escrito por: Hiroshi Seko</li>
@@ -68,15 +68,15 @@
     </div>
     
     <div class="gallery">
-        <div class="item"><img src="../imagen/grade1.jpg" alt="Imagem 1"></div>
-        <div class="item"><img src="../imagen/grade2.png" alt="Imagem 2"></div>
-        <div class="item"><img src="../imagen/grade3.png" alt="Imagem 3"></div>
-        <div class="item"><img src="../imagen/grad4.png" alt="Imagem 4"></div>
-        <div class="item"><img src="../imagen/grade5.png" alt="Imagem 5"></div>
-        <div class="item"><img src="../imagen/grade6.png" alt="Imagem 6"></div>
-        <div class="item"><img src="../imagen/grade7.png" alt="Imagem 7"></div>
-        <div class="item"><img src="../imagen/grad8.png" alt="Imagem 8"></div>
-        <div class="item"><img src="../imagen/grade9.png" alt="Imagem 9"></div>
+        <div class="item"><img src="./imagen/grade1.jpg" alt="Imagem 1"></div>
+        <div class="item"><img src="./imagen/grade2.png" alt="Imagem 2"></div>
+        <div class="item"><img src="./imagen/grade3.png" alt="Imagem 3"></div>
+        <div class="item"><img src="./imagen/grad4.png" alt="Imagem 4"></div>
+        <div class="item"><img src="./imagen/grade5.png" alt="Imagem 5"></div>
+        <div class="item"><img src="./imagen/grade6.png" alt="Imagem 6"></div>
+        <div class="item"><img src="./imagen/grade7.png" alt="Imagem 7"></div>
+        <div class="item"><img src="./imagen/grad8.png" alt="Imagem 8"></div>
+        <div class="item"><img src="./imagen/grade9.png" alt="Imagem 9"></div>
     </div>
     
     <div class="frase">
@@ -84,12 +84,12 @@
     </div>
 
     <ul class="list">
-        <li class="ig" style="background-image: url('../imagen/gojo.jpeg');"></li>
-        <li class="ig" style="background-image: url('../imagen/nanami.jpeg');"></li>
-        <li class="ig" style="background-image: url('../imagen/nobara.jpeg');"></li>
-        <li class="ig" style="background-image: url('../imagen/itadori.jpeg');"></li>
-        <li class="ig" style="background-image: url('../imagen/Megumi.jpeg');"></li>
-        <li class="ig" style="background-image: url('../imagen/sukuna.jpeg');"></li>
+        <li class="ig" style="background-image: url('./imagen/gojo.jpeg');"></li>
+        <li class="ig" style="background-image: url('./imagen/nanami.jpeg');"></li>
+        <li class="ig" style="background-image: url('./imagen/nobara.jpeg');"></li>
+        <li class="ig" style="background-image: url('./imagen/itadori.jpeg');"></li>
+        <li class="ig" style="background-image: url('./imagen/Megumi.jpeg');"></li>
+        <li class="ig" style="background-image: url('./imagen/sukuna.jpeg');"></li>
     </ul>
 
     <script src="script.js"></script>
