--- a/paginas/index.html
+++ b/paginas/index.html
@@ -62,7 +62,7 @@
             <ul class="lista-textos">
                 <li class="texto1">Escrito por: Hiroshi Seko</li>
                 <li class="texto2">Elenco: Junya Enoki, Yuma Uchida, Yuichi Nakamura</li>
-                <li class="texto3">A história segue o estudante do ensino médio Yuji Itadori enquanto ele se junta a uma organização secreta de Feiticeiros Jujutsu para eliminar uma poderosa Maldição chamada Ryomen Sukuna, da qual Yuji se torna o hospedeiro.</li>
+                <li class="texto3">A história segue o estudante do ensino médio Yuji Itadori enquanto ele se junta a uma organização secreta de Feiticeiros Jujutsu para </li> <li class="texto3">eliminar uma poderosa Maldição chamada Ryomen Sukuna, da qual Yuji se torna o hospedeiro.</li>
             </ul>
         </div>
     </div>
